--- a/Homepage.css
+++ b/Homepage.css
@@ -67,9 +67,11 @@ li{
   .icons {
     color: black;
     list-style: none;
+    padding: 15px;
     display: flex;
     flex-direction: row;
+    align-self: flex-start;
+    justify-content: center;
     font-size:20px;
 
   }
-
